--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.9",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-fbsdk-next": "^11.1.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
