--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-firebase/app": "^17.1.0",
     "@react-native-firebase/auth": "^17.1.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/drawer": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "react": "18.2.0",
@@ -21,9 +23,12 @@
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-pager-view": "^6.1.2",
+    "react-native-paper": "^5.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
